# binary-classification-gcp

./: .gitignore  Dockerfile  README.md  dockerfile  main.py  pyproject.toml  requirements.txt
src/: Homepage.py  model.py
src/pages/: Architecture.py  Inference.py
